<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>

    <string name="result_text">Results</string>
    <string name="live_score_text">Live Score</string>
    <string name="live_stream_text">Live Video</string>
    <string name="news_text">News</string>
    <string name="result_btn_text">Results</string>
    <string name="all_result_btn_text">All Results</string>
    <string name="date_text">Today</string>
    <string name="toggle_button">ToggleButton</string>

</resources>
