<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff"
        android:focusable="false">

        <!--  Header Starts-->
        <GridLayout android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:columnCount="4"
            android:paddingEnd="5dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingStart="5dip"
            android:padding="5dip"
            android:columnOrderPreserved="false"
            android:focusable="true">
            <!-- Logo Start-->
            <ToggleButton
                android:text="@string/toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton"
                android:layout_row="0"
                android:layout_column="0" />

            <ImageView android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="10dip"
                android:focusable="false"
                tools:ignore="ContentDescription,RtlHardcoded" />
            <!-- Logo Ends -->

            <!--Profile image starts here-->
            <ImageView android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:contentDescription=""
                tools:ignore="ContentDescription" />
            <!--Profile image ands here-->

            <!--Menu texts starts here-->
            <TextView
                android:id="@+id/score_results"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:text="@string/result_text"
                android:layout_row="1"
                android:layout_column="0"
                android:textSize="24sp"
                android:textAlignment="center"
                tools:textColor="@color/white" />
            <TextView
                android:id="@+id/live_score"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:text="@string/live_score_text"
                android:layout_row="1"
                android:layout_column="1"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/live_stream"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:text="@string/live_stream_text"
                android:layout_row="1"
                android:layout_column="2"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/news"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:text="@string/news_text"
                android:layout_row="1"
                android:layout_column="3"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                tools:ignore="RtlHardcoded" />
            <!--Menu texts ends here-->
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:columnCount="2"
            android:rowCount="3">

            <TextView
                android:text="@string/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:layout_columnSpan="2"
                android:layout_row="1"
                android:textSize="18sp"
                android:layout_column="0"
                android:textAlignment="center" />

            <Button
                android:text="@string/result_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/result_button"
                android:background="@color/result_btn"
                android:textColor="@color/white"
                android:layout_row="0"
                android:layout_column="0"
                android:padding="5dip"
                android:paddingBottom="5dip"
                android:paddingEnd="5dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="5dip"
                android:paddingStart="5dip"
                android:layout_margin="5dip"
                android:fadingEdge="horizontal"
                android:focusable="false" />

            <Button
                android:text="@string/all_result_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/all_result_button"
                android:textColor="@color/white"
                android:background="@color/result_btn"
                android:layout_column="1"
                android:layout_row="0"
                android:padding="5dip"
                android:paddingBottom="5dip"
                android:paddingEnd="5dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingStart="5dip"
                android:paddingTop="5dip"
                android:layout_margin="5dip"
                android:fadingEdge="horizontal"
                android:focusable="false" />
        </GridLayout>

        <!--  Header Ends -->

        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <!-- Footer Ends -->

        <!-- Login Form -->
        <!-- Login Form Ends -->

    </RelativeLayout>
</ScrollView>